# notes

./: .gitignore  CLAUDE.md  LICENSE  README.md  TASKS.md  pyproject.toml
deploy/: Caddyfile.template  README.md  check-prereqs.sh  config.env.example  setup-tailscale.sh  start.sh  stop.sh
initial-spec/: data-model.md  tools.md
src/botnotes/: __init__.py  auth.py  backup.py  cli.py  config.py  server.py
src/botnotes/links/: __init__.py  index.py  parser.py
src/botnotes/models/: __init__.py  note.py  version.py
src/botnotes/search/: __init__.py  tantivy_index.py
src/botnotes/services/: __init__.py  note_service.py
src/botnotes/storage/: __init__.py  base.py  filesystem.py  git_repo.py  lock.py
src/botnotes/tools/: history.py  links.py  notes.py  search.py  tags.py
src/botnotes/web/: __init__.py  admin.py  app.py  auth.py  markdown.py  routes.py  views.py
src/botnotes/web/static/: app.js
src/botnotes/web/templates/: admin.html  base.html  folder_view.html  note_detail.html  note_history.html  note_new.html  notes_list.html  search_help.html  search_results.html  tags_list.html
src/notes/: cli.py  config.py  server.py
src/notes/links/: __init__.py  index.py
src/notes/models/: __init__.py  note.py
src/notes/search/: __init__.py  tantivy_index.py
src/notes/services/: __init__.py  note_service.py
src/notes/storage/: __init__.py  base.py  filesystem.py
src/notes/tools/: __init__.py  history.py  links.py  notes.py  search.py  tags.py
src/notes/web/: admin.py  app.py  auth.py  routes.py  views.py
src/notes/web/templates/: admin.html  base.html  folder_view.html  note_detail.html  note_diff.html  note_new.html  note_version.html
tests/: __init__.py  conftest.py  test_auth.py  test_backlinks.py  test_backup.py  test_cli.py  test_config.py  test_git_repo.py  test_links.py  test_lock.py  test_markdown.py  test_mcp_tools.py  test_search.py  test_service.py  test_storage.py  test_tools.py  test_validation.py  test_web.py  test_web_auth.py
