[project]
name = "botnotes"
version = "0.1.0"
description = "AI-friendly note-taking solution with MCP integration"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "fastmcp>=2.0.0",
    "tantivy>=0.22.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.0",
    "mistune>=3.0.0",
    "nh3>=0.2.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
botnotes = "botnotes.server:main"
botnotes-web = "botnotes.web.app:main"
botnotes-admin = "botnotes.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/botnotes"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
    "nox>=2025.11.12",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
